--- a/packages/shared/styles/variables/_typography.scss
+++ b/packages/shared/styles/variables/_typography.scss
@@ -1,8 +1,8 @@
 @import "../helpers";
 html {
   // font-family
-  --font-family--primary: "Roboto", serif;
-  --font-family--secondary: "Raleway", sans-serif;
+  --font-family--primary:"Roboto", sans-serif;// content
+  --font-family--secondary: "Source Sans Pro", sans-serif; // heading
   //font-weight
   --font-weight--light: 300;
   --font-weight--normal: 400;
